2008-08-27  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Only use *.ogg for audio Oggs
	(Closes: #12890)
	* tests/list:
	* tests/test.ogg: Add a test ogg vorbis file

2008-08-20  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in:
	* tests/ccfilm.axv:
	* tests/list: Add Annodex mime-types, from
	http://www.annodex.net/TR/annodex.html#anchor15

2008-08-19  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix priority of the SMIL detection
	so it's lower than that of SMILtext media links (See
	http://bugzilla.gnome.org/show_bug.cgi?id=518688#c4)
	* tests/hbo-playlist.qtl: Add a test file for the above
	* tests/list:

2008-08-08  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add application/smil+xml as
	an alias for application/smil, as used at
	http://www.cartalk.com/Radio/Show/online.html

2008-07-23  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: Force recreating the pot file when running make

=== shared-mime-info 0.51 ===

2008-07-23  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* configure.in: 0.51

2008-07-23  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Fix capitalisation in a number
	of mime-types, better description for a number of content-types,
	thanks to Benno Schulenberg <bensberg@justemail.net>

=== shared-mime-info 0.50 ===

2008-07-22  Bastien Nocera  <hadess@hadess.net>

	* Makefile.am: fix distcheck
	* NEWS: upd
	* configure.in: 0.50

2008-07-21  Bastien Nocera  <hadess@hadess.net>

	* freedesktop.org.xml.in: Add MSI (Windows Installer) mime-type,
	including magic, based on work from Scott Ritchie
	<scott@open-vote.org> (Closes: #16495)
	* tests/list:
	* tests/test.msi: add test case for the above

2008-07-20  Bastien Nocera  <hadess@hadess.net>

	* shared-mime-info-spec.xml: Better wording on the intentions
	for the "path" property, patch from Matthias Clasen
	<mclasen@redhat.com>

2008-07-20  Bastien Nocera  <hadess@hadess.net>
