@@ -1,3 +1,9 @@
+2008-09-10  Bastien Nocera  <hadess@hadess.net>
+
+	* shared-mime-info-spec.xml: Clarify some statements to
+	include "of the same weight" when talking about comparisons,
+	patch from David Faure <dfaure@trolltech.com>
+
 2008-08-27  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml.in: Only use *.ogg for audio Oggs
